--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ NAVIGATION SECTION
   padding-top: 16px;
 }
 
-.navigation-logo {
+.navigation-logo p {
   font-size: 40px;
   font-weight: 700;
 }
@@ -62,6 +62,7 @@ NAVIGATION SECTION
 
 .navigation-link {
   font-size: 18px;
+  font-weight: 400;
   color: #fff;
   text-decoration: none;
   transition: 0.3s all;
@@ -79,8 +80,6 @@ NAVIGATION SECTION
   gap: 12px;
   padding: 6px 12px;
 
-  font-size: 16px;
-  font-weight: 700;
   text-align: center;
 
   border: none;
@@ -95,6 +94,11 @@ NAVIGATION SECTION
 .metamask-icon {
   height: 30px;
   width: 30px;
+}
+
+.navigation-btn span {
+  font-size: 16px;
+  font-weight: 700;
 }
 
 /****************
@@ -116,6 +120,7 @@ MAIN SECTION
 
 .description-text {
   font-size: 18px;
+  font-weight: 400;
 }
 
 .selected-artists {
@@ -140,6 +145,7 @@ MAIN SECTION
   padding-top: 25px;
   padding-left: 10px;
   line-height: 1.5;
+  font-weight: 400;
 }
 
 .heading-text {
@@ -227,12 +233,13 @@ SECONDARY SECTION
 
 .testimonials-text {
   font-size: 18px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .testimonials-author {
   margin-top: 60px;
   text-decoration: underline;
+  font-weight: 400;
 }
 
 .banner {
@@ -313,6 +320,7 @@ POPULARES DA SEMANA
 
 .astronaut-second-line p {
   font-size: 20px;
+  font-weight: 400;
   color: #ff5b50;
   margin: 0px 0px 26px;
 }
@@ -347,7 +355,7 @@ MELHORES ARTISTAS
 }
 
 .artist-container:hover {
-  transition: 0.3s all;
+  transition: 0.5s all;
   background: #ff5b50;
 }
 
@@ -372,12 +380,178 @@ MELHORES ARTISTAS
 }
 
 .ver-todos-os-artistas a {
+  font-weight: 400;
   cursor: pointer;
   transition: 0.3s all;
 }
 
 .ver-todos-os-artistas a:hover {
   color: #ff5b50;
+}
+
+/****************
+FOOTER FIRST PART
+****************/
+
+.footer-first {
+  background: #252525;
+  padding: 0 40px;
+  border-bottom: 1px solid #5a5757;
+}
+
+.footer-first-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 80px 0 60px;
+}
+
+.home-button {
+  background: #ff5b50;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+
+  transition: all 0.3s;
+}
+
+.home-button:hover {
+  background: #c4463d;
+}
+
+/****************
+FOOTER SECOND PART
+****************/
+
+.footer-second {
+  background: #252525;
+  padding: 0 40px;
+  border-bottom: 1px solid #5a5757;
+
+  display: grid;
+  align-items: center;
+
+  justify-content: space-between;
+  grid-template-columns: 1fr 2fr;
+}
+
+.footer-newsletter {
+  height: 100%;
+  border-right: 1px solid #5a5757;
+}
+
+.footer-newsletter-box {
+  padding-top: 40px;
+}
+
+.footer-newsletter-box p {
+  font-size: 30px;
+}
+
+input {
+  font-size: 20px;
+  padding: 14px;
+  border: none;
+  font-weight: 700;
+}
+
+input:first-child {
+  color: #5a5757;
+  font-weight: 500;
+  background: #0d0d0d;
+  border: 1px solid #000;
+}
+
+input:last-child {
+  padding: 15px 18px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+input:last-child:hover {
+  background: #ff5b50;
+}
+
+.footer-map {
+  display: flex;
+  justify-self: end;
+  flex-direction: row;
+  gap: 130px;
+  padding: 60px 140px 60px 0px;
+}
+
+.footer-column {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  gap: 16px;
+  color: #5a5757;
+}
+
+.footer-column a {
+  text-decoration: none;
+  color: #5a5757;
+  transition: 0.3s all;
+  font-weight: 400;
+}
+
+.footer-column a:hover {
+  color: #ff5b50;
+}
+
+.footer-column a:first-child {
+  color: #fff;
+  font-weight: 500;
+}
+
+.footer-column a:first-child:hover {
+  color: #ff5b50;
+}
+
+/****************
+FOOTER LAST LINE
+****************/
+
+.footer-last {
+  background: #252525;
+  padding: 0 40px;
+}
+
+.footer-last-line {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: 70px 0px;
+}
+
+.footer-last-line div a {
+  color: #5A5757;
+  text-decoration: none;
+  transition: 0.3s all;
+}
+
+.footer-last-line div a:hover {
+  color: #ff5b50;
+}
+
+.social-media-container {
+  display: flex;
+  gap: 40px;
+}
+
+.social-media {
+  color: #252525;
+  width: 30px;
+}
+
+.social-media:hover {
+  fill: #ff5b50;
 }
 
 /****************
@@ -391,4 +565,8 @@ HELPER
 .colored-underline {
   color: #ff5b50;
   text-decoration: underline;
+}
+
+.bold {
+  font-weight: 700;
 }
