--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ NAVIGATION SECTION
   display: flex;
   align-items: center;
   gap: 12px;
-  padding: 6px 12px;
+  padding: 6px 18px;
 
   text-align: center;
   border: none;
@@ -114,7 +114,7 @@ MAIN SECTION
   grid-template-columns: 2fr 3fr 1fr;
   align-items: center;
   gap: 40px;
-  margin: 10px 0 60px;
+  margin: 10px 0 50px;
 }
 
 .description {
@@ -125,6 +125,7 @@ MAIN SECTION
 .description-text {
   font-size: 18px;
   font-weight: 400;
+  line-height: 1.25;
 }
 
 .selected-artists {
@@ -258,7 +259,7 @@ SECONDARY SECTION
 }
 
 /****************
-POPULARES DA SEMANA
+POPULAR OF THE WEEK SECTION
 ****************/
 
 .third-background {
@@ -266,14 +267,14 @@ POPULARES DA SEMANA
   padding: 0 35px;
 }
 
-.populares-da-semana h2 {
+.popular h2 {
   padding: 160px 0;
   margin: 0;
   font-size: 50px;
   font-weight: 700;
 }
 
-.populares-grid {
+.popular-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-content: space-between;
@@ -282,7 +283,7 @@ POPULARES DA SEMANA
   position: relative;
 }
 
-.populares-grid::after {
+.popular-grid::after {
   content: "";
   position: absolute;
   border-right: 1px solid #252525;
@@ -334,10 +335,10 @@ POPULARES DA SEMANA
 }
 
 /****************
-MELHORES ARTISTAS
+BEST ARTISTS SECTION
 ****************/
 
-.melhores-artistas h2 {
+.best-artists h2 {
   font-size: 50px;
   font-weight: 700;
   text-align: center;
@@ -376,14 +377,14 @@ MELHORES ARTISTAS
   font-size: 20px;
 }
 
-.ver-todos-os-artistas {
+.see-all-artists {
   padding: 60px 0 90px 0;
   text-align: center;
   font-size: 20px;
   font-weight: 500;
 }
 
-.ver-todos-os-artistas a {
+.see-all-artists a {
   color: #fff;
   text-decoration: none;
   font-weight: 400;
@@ -391,8 +392,8 @@ MELHORES ARTISTAS
   transition: 0.3s all;
 }
 
-.ver-todos-os-artistas a:hover,
-.ver-todos-os-artistas a:active {
+.see-all-artists a:hover,
+.see-all-artists a:active {
   color: #ff5b50;
 }
 
