--- a/styles.css
+++ b/styles.css
@@ -14,18 +14,19 @@
 }
 
 html {
+  font-size: 62.5%;
   scroll-behavior: smooth;
 }
 
 body {
   color: #fff;
   margin: 0;
-  max-width: 1439px;
+  max-width: 143.2rem;
 }
 
 .main-background {
   background-image: url(/assets/background.png);
-  padding: 0 40px;
+  padding: 0 4.5rem;
 }
 
 /****************
@@ -44,11 +45,11 @@ NAVIGATION SECTION
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 16px;
+  padding-top: 1.6rem;
 }
 
 .navigation-logo p {
-  font-size: 40px;
+  font-size: 4rem;
   font-weight: 700;
 }
 
@@ -61,11 +62,11 @@ NAVIGATION SECTION
   display: flex;
   list-style: none;
   text-decoration: none;
-  gap: 60px;
+  gap: 6rem;
 }
 
 .navigation-link {
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 400;
   color: #fff;
   text-decoration: none;
@@ -81,8 +82,8 @@ NAVIGATION SECTION
 .navigation-btn {
   display: flex;
   align-items: center;
-  gap: 12px;
-  padding: 6px 18px;
+  gap: 1.2rem;
+  padding: 0.6rem 1.8rem;
 
   text-align: center;
   border: none;
@@ -96,12 +97,12 @@ NAVIGATION SECTION
 }
 
 .metamask-icon {
-  height: 30px;
-  width: 30px;
+  height: 3rem;
+  width: 3rem;
 }
 
 .navigation-btn span {
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: 700;
 }
 
@@ -113,17 +114,17 @@ MAIN SECTION
   display: grid;
   grid-template-columns: 2fr 3fr 1fr;
   align-items: center;
-  gap: 40px;
-  margin: 10px 0 50px;
+  gap: 4rem;
+  margin: -1.2rem 0 5rem;
 }
 
 .description {
   align-self: start;
-  margin: 35px 0;
+  margin: 3.5rem 0;
 }
 
 .description-text {
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 400;
   line-height: 1.25;
 }
@@ -131,30 +132,31 @@ MAIN SECTION
 .selected-artists {
   display: flex;
   align-items: flex-end;
-  margin-top: 50px;
+  margin-top: 5rem;
 }
 
 .selected-artists-faces {
   display: flex;
   align-items: center;
-  margin-left: 60px;
+  margin-left: 6rem;
 }
 
 .selected-artists-faces img {
-  height: 85px;
-  width: 85px;
-  margin-left: -60px;
+  height: 8.5rem;
+  width: 8.5rem;
+  margin-left: -6rem;
 }
 
 .selected-artists-faces p {
-  padding-top: 25px;
-  padding-left: 10px;
+  font-size: 1.6rem;
+  padding-top: 2.5rem;
+  padding-left: 1rem;
   line-height: 1.5;
   font-weight: 400;
 }
 
 .heading-text {
-  font-size: 50px;
+  font-size: 4.8rem;
   font-weight: 700;
 }
 
@@ -166,13 +168,14 @@ GALLERY SECTION
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  column-gap: 16px;
-  row-gap: 60px;
+  column-gap: 1.6rem;
+  row-gap: 6rem;
 }
 
 .gallery-image {
+  display: inline-block;
   border: 1px solid #fff;
-  max-width: 297px;
+  max-width: 100%;
   transition: 0.3s all;
 }
 
@@ -188,8 +191,9 @@ SECONDARY SECTION
   background: #000;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: 2fr 1.8fr;
   border-bottom: 1px solid #252525;
+  max-width: 100%;
 }
 
 .lateral-column {
@@ -206,43 +210,44 @@ SECONDARY SECTION
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 60px;
   text-align: center;
+  margin-top: 2rem;
 }
 
 .lateral-column-num {
-  font-size: 50px;
+  font-size: 5rem;
   font-weight: 500;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .lateral-column-text {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 500;
   color: #5a5757;
-  margin-top: 10px;
+  margin-top: 1rem;
   font-weight: 700;
 }
 
 .testimonials-1 {
   grid-column: 2 / 4;
   grid-row: 1;
-  margin: 40px 80px;
+  margin: 4rem 8rem;
 }
 
 .testimonials-2 {
   grid-column: 4 / 6;
   grid-row: 1;
-  margin: 40px 80px;
+  margin: 4rem 8rem;
 }
 
 .testimonials-text {
-  font-size: 18px;
+  font-size: 1.8rem;
   font-weight: 400;
 }
 
 .testimonials-author {
-  margin-top: 60px;
+  font-size: 1.6rem;
+  margin-top: 6rem;
   text-decoration: underline;
   font-weight: 400;
 }
@@ -256,21 +261,22 @@ SECONDARY SECTION
 
 .banner img {
   display: inline-block;
+  max-width: 100%;
 }
 
 /****************
-POPULAR OF THE WEEK SECTION
+POPULAR THIS WEEK SECTION
 ****************/
 
 .third-background {
   background: #000;
-  padding: 0 35px;
+  padding: 0 9.5rem 0 7.5rem;
 }
 
 .popular h2 {
-  padding: 160px 0;
+  padding: 16rem 0;
   margin: 0;
-  font-size: 50px;
+  font-size: 5rem;
   font-weight: 700;
 }
 
@@ -278,8 +284,7 @@ POPULAR OF THE WEEK SECTION
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-content: space-between;
-  gap: 60px;
-  margin: 0 30px 0 20px;
+  gap: 6rem;
   position: relative;
 }
 
@@ -287,15 +292,16 @@ POPULAR OF THE WEEK SECTION
   content: "";
   position: absolute;
   border-right: 1px solid #252525;
-  height: 720px;
+  height: 72rem;
   top: 4%;
   right: 50%;
 }
 
 .astronaut-container {
-  width: 350px;
-  height: 335px;
+  width: 35rem;
+  height: 33.5rem;
   transition: 0.3s all;
+  /* margin: 0 2rem; */
 }
 
 .astronaut-container:hover {
@@ -308,8 +314,8 @@ POPULAR OF THE WEEK SECTION
 }
 
 .astronaut-first-line h3 {
-  font-size: 30px;
-  margin-bottom: 32px;
+  font-size: 3rem;
+  margin-bottom: 3.2rem;
 }
 
 .astronaut-second-line {
@@ -318,16 +324,20 @@ POPULAR OF THE WEEK SECTION
 }
 
 .astronaut-second-line h3 {
-  font-size: 20px;
+  font-size: 2rem;
   color: #5a5757;
-  margin: 0px 0px 26px;
+  margin: 0rem 0rem 2.6rem;
 }
 
 .astronaut-second-line p {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 400;
   color: #ff5b50;
-  margin: 0px 0px 26px;
+  margin: 0rem 0rem 2rem;
+}
+
+.astronaut-third-line img {
+  width: 100%;
 }
 
 .astronaut-end {
@@ -339,22 +349,21 @@ BEST ARTISTS SECTION
 ****************/
 
 .best-artists h2 {
-  font-size: 50px;
+  font-size: 5rem;
   font-weight: 700;
   text-align: center;
-  margin: 180px 0 100px;
+  margin: 18rem 0 10rem;
 }
 
 .artists-grid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 120px;
+  gap: 8.5rem;
 }
 
 .artist-container {
   display: flex;
-  gap: 30px;
-  padding: 20px;
+  gap: 3rem;
+  padding: 2.4rem;
   background: #252525;
   cursor: pointer;
 }
@@ -370,17 +379,17 @@ BEST ARTISTS SECTION
 }
 
 .artist-image {
-  padding-left: 10px;
+  padding-left: 1rem;
 }
 
 .artist-text {
-  font-size: 20px;
+  font-size: 1.6rem;
 }
 
 .see-all-artists {
-  padding: 60px 0 90px 0;
+  padding: 6rem 0 9rem 0;
   text-align: center;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 500;
 }
 
@@ -403,7 +412,7 @@ FOOTER FIRST PART
 
 .footer-first {
   background: #252525;
-  padding: 0 40px;
+  padding: 0 4rem;
   border-bottom: 1px solid #5a5757;
 }
 
@@ -412,13 +421,13 @@ FOOTER FIRST PART
   justify-content: space-between;
   align-items: center;
 
-  padding: 80px 0 60px;
+  padding: 8rem 0 6rem;
 }
 
 .home-button {
   background: #ff5b50;
-  width: 80px;
-  height: 80px;
+  width: 8rem;
+  height: 8rem;
   cursor: pointer;
 
   display: flex;
@@ -440,7 +449,7 @@ FOOTER SECOND PART
 
 .footer-second {
   background: #252525;
-  padding: 0 40px;
+  padding: 0 4rem;
   border-bottom: 1px solid #5a5757;
 
   display: grid;
@@ -456,16 +465,17 @@ FOOTER SECOND PART
 }
 
 .footer-newsletter-box {
-  padding-top: 40px;
+  padding-top: 4rem;
+  padding-right: 4rem;
 }
 
 .footer-newsletter-box p {
-  font-size: 30px;
+  font-size: 3rem;
 }
 
 input {
-  font-size: 20px;
-  padding: 14px;
+  font-size: 1.6rem;
+  padding: 1.4rem;
   border: none;
   font-weight: 700;
 }
@@ -478,7 +488,7 @@ input:first-child {
 }
 
 input:last-child {
-  padding: 15px 18px;
+  padding: 1.5rem 1.8rem;
   cursor: pointer;
   transition: all 0.3s;
 }
@@ -490,21 +500,21 @@ input:last-child:active {
 
 .footer-map {
   display: flex;
-  justify-self: end;
   flex-direction: row;
-  gap: 130px;
-  padding: 60px 140px 60px 0px;
+  gap: 13rem;
+  padding: 6rem 0rem 6rem 12rem;
 }
 
 .footer-column {
   display: flex;
   flex-direction: column;
-  font-size: 20px;
-  gap: 16px;
+  font-size: 2rem;
+  gap: 1.6rem;
   color: #5a5757;
 }
 
 .footer-column a {
+  font-size: 1.8rem;
   text-decoration: none;
   color: #5a5757;
   transition: 0.3s all;
@@ -532,17 +542,18 @@ FOOTER LAST LINE
 
 .footer-last {
   background: #252525;
-  padding: 0 40px;
+  padding: 0 4rem;
 }
 
 .footer-last-line {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
-  padding: 70px 0px;
+  padding: 7rem 0rem;
 }
 
 .footer-last-line div a {
+  font-size: 1.6rem;
   color: #5a5757;
   text-decoration: none;
   transition: 0.3s all;
@@ -555,12 +566,12 @@ FOOTER LAST LINE
 
 .social-media-container {
   display: flex;
-  gap: 40px;
+  gap: 4rem;
 }
 
 .social-media {
   color: #252525;
-  width: 30px;
+  width: 3rem;
 }
 
 /****************
@@ -578,4 +589,12 @@ HELPER
 
 .bold {
   font-weight: 700;
+}
+
+.grid-3-columns {
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-2-columns {
+  grid-template-columns: repeat(2, 1fr);
 }
