--- a/queries.css
+++ b/queries.css
@@ -125,9 +125,139 @@
   .artist-container {
     width: 80%;
   }
+
+  .artists-grid {
+    gap: 3rem;
+  }
+
+  .artist-container {
+    gap: 1.5rem;
+  }
+
+  .artist-image img {
+    width: 8rem;
+  }
+
+  .footer-second {
+    grid-template-columns: 1fr 1.5fr;
+  }
+
+  .footer-map {
+    gap: 8rem;
+    padding: 6rem 0rem 6rem 10rem;
+  }
 }
 
-/* MOBILE NAVIGATION */
 @media (max-width: 56em) {
-  
+  /* MOBILE NAVIGATION */
+  .navigation-container {
+    background: #353535ab;
+    backdrop-filter: blur(10px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: translateX(100%);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.5s all ease-in-out;
+
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
+
+  .nav-open .navigation-container {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+    transform: translateX(0);
+  }
+
+  .navigation-container .mobile-nav-icon[name="close-outline"] {
+    display: block;
+  }
+
+  .navigation-container .mobile-nav-icon[name="menu-outline"] {
+    display: none;
+  }
+
+  .navigation-links {
+    flex-direction: column;
+    gap: 4.6rem;
+    color: #000;
+  }
+
+  .navigation-link:link,
+  .navigation-link:visited {
+    font-size: 3.6rem;
+  }
+
+  .mobile-nav-button {
+    display: block;
+    z-index: 10;
+  }
+
+  /* MOBILE FOX BUTTON */
+  .mobile-fox-btn {
+    background: transparent;
+    padding: 0;
+    color: #fff;
+  }
+
+  .mobile-fox-btn span {
+    font-weight: 400;
+    font-size: 3.6rem;
+  }
+
+  .nav-open .mobile-fox {
+    display: block;
+  }
+
+  .navigation-btn:hover,
+  .navigation-btn:active {
+    background: transparent;
+    color: #ff5b50;
+  }
+
+  /* NORMAL FOX BUTTON */
+  .normal-fox {
+    display: none;
+  }
+
+  /* POPULAR THIS WEEK */
+  .popular h2 {
+    padding: 8rem 0;
+  }
+
+  .popular-grid {
+    gap: 3rem;
+  }
+
+  .astronaut-container {
+    width: 80%;
+  }
+
+  .astronaut-first-line h3 {
+    font-size: 2.4rem;
+  }
+
+  .arrow {
+    height: 2em;
+  }
+
+  .astronaut-second-line h3,
+  .astronaut-second-line p {
+    font-size: 1.6rem;
+  }
+
+  .popular-grid::after {
+    display: none;
+  }
+}
+
+@media (max-width: 48.75em) {
 }
