--- a/queries.css
+++ b/queries.css
@@ -53,7 +53,7 @@
   /* SECONDARY */
   .second-background {
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
   }
 
   .lateral-column {
@@ -146,9 +146,19 @@
     gap: 8rem;
     padding: 6rem 0rem 6rem 10rem;
   }
+
+  .home-button {
+    width: 5.5rem;
+    height: 5.5rem;
+  }
 }
 
 @media (max-width: 56em) {
+  /* NAVIGATION */
+  .navigation-logo p {
+    font-size: 3.6rem;
+  }
+
   /* MOBILE NAVIGATION */
   .navigation-container {
     background: #353535ab;
@@ -229,7 +239,13 @@
   }
 
   /* POPULAR THIS WEEK */
+  .third-background {
+    padding: 0 9.5rem -1rem 7.5rem;
+  }
+
   .popular h2 {
+    text-align: center;
+    font-size: 4rem;
     padding: 8rem 0;
   }
 
@@ -257,7 +273,152 @@
   .popular-grid::after {
     display: none;
   }
+
+  .footer-map {
+    padding: 6rem 0rem 6rem 7.5rem;
+  }
+
+  /* BEST ARTISTS */
+  .best-artists h2 {
+    text-align: center;
+    font-size: 4rem;
+    margin: 8rem 0 10rem;
+  }
+
+  .home-button {
+    width: 4.5rem;
+    height: 4.5rem;
+  }
 }
 
-@media (max-width: 48.75em) {
+@media (max-width: 49em) {
+  .navigation-logo p {
+    font-size: 3.2rem;
+  }
+
+  /* GALLERY */
+  .gallery-section {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    row-gap: 3rem;
+    justify-content: center;
+    padding: 0 0 0 5.5rem;
+  }
+
+  .gallery-image {
+    max-width: 80%;
+  }
+
+  /* TESTIMONIALS */
+  .lateral-column-container {
+    margin: -1rem auto 3rem;
+  }
+
+  .testimonials-1 {
+    margin: 2rem 6rem;
+  }
+
+  .testimonials-2 {
+    margin: 0rem 6rem 2rem;
+  }
+
+  /* POPULAR */
+  .popular-grid {
+    grid-template-columns: 1fr;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+  }
+
+  .astronaut-third-line img {
+    width: 80%;
+  }
+
+  /* BEST ARTISTS */
+
+  /* FOOTER */
+  .footer-second {
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+
+  .footer-newsletter {
+    height: 100%;
+    border: none;
+  }
+
+  .footer-newsletter-box {
+    text-align: center;
+  }
+
+  .footer-newsletter-box p {
+    font-size: 3rem;
+  }
+
+  input:first-child {
+    width: 50%;
+    border: 1px solid #000;
+  }
+
+  .footer-map {
+    gap: 10rem;
+    padding: 6rem 0rem 6rem 0rem;
+    margin: 0 auto;
+  }
 }
+
+@media (max-width: 39.75em) {
+  .main {
+    margin: -5rem 0 3rem;
+  }
+
+  .heading-text {
+    font-size: 3.6rem;
+  }
+
+  .description-text {
+    font-size: 1.8rem;
+  }
+
+  /* SECONDARY */
+  .second-background {
+    grid-template-columns: 1.75fr 1fr 1fr 1fr 1fr 1fr;
+  }
+
+  .lateral-column {
+    grid-column: 1;
+  }
+
+  .lateral-column-container{
+    margin-top: 3rem;
+  }
+
+  .lateral-column-num {
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+  
+  .lateral-column-text {
+    font-size: 1.8rem;
+    margin-top: 0.8rem;
+  }
+
+  .testimonials-1{
+    grid-column: 2 / -1;
+  }
+
+  .testimonials-2{
+    grid-column: 2 / -1;
+  }
+
+  .testimonials-text {
+    font-size: 1.6rem;
+  }
+  
+  .testimonials-author {
+    font-size: 1.4rem;
+    margin-top: 2rem;
+  }
+}
+
+/* 436 NAV OFF
