--- a/styles.css
+++ b/styles.css
@@ -329,11 +329,10 @@ POPULAR THIS WEEK SECTION
   right: 50%;
 }
 
-.astronaut-container {
-  width: 35rem;
-  height: 33.5rem;
+.astronaut-container {  
+  max-width: 35rem;
   transition: 0.3s all;
-  /* margin: 0 2rem; */
+  margin: 0 2rem;
 }
 
 .astronaut-container:hover {
@@ -580,13 +579,13 @@ FOOTER LAST LINE
 
 .footer-last-line {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   padding: 7rem 0rem;
 }
 
 .footer-last-line div a {
-  font-size: 1.6rem;
+  font-size: 2.2rem;
   color: #5a5757;
   text-decoration: none;
   transition: 0.3s all;
